Функционал загрузки по на кластер, доработка jobSubmit, починка статистики и страница дашбордов